--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -10,7 +10,8 @@
         <button onclick="location.href='/page3'">Resultados DB</button>
         <button onclick="location.href='/page4'">Tutorial</button>
         <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/consent';">Visualizar Termo</button>
-        <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/';">Sair</button>
+        <button onclick="logoutUser()">Sair</button>
+        <!-- <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/';">Sair</button> -->
 
     </div>
 </div>
