Adiciona a opção "Sair" (logout) ao lado de "Consentimento" no menu superior

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -31,6 +31,7 @@
             <a href="/page3">Resultados</a> |
             <a href="/page4">Tutorial</a> |
             <a href="/consent">Consentimento</a>
+            <a href="#" onclick="logoutUser()">Sair</a>
         </nav>
     </header>
     <main>
