--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -27,7 +27,8 @@
             <span id="user-display" style="margin-right: 15px; font-weight: bold; color: navy;"></span>
             <a href="/">Início</a> |
             <a href="/page1">Carregar</a> |
-            <a href="/page2">Gravar</a> |
+<!--            <a href="/page2">Gravar</a> |-->
+            <a href="/instructions">Gravar</a> |
             <a href="/page3">Resultados</a> |
             <a href="/page4">Tutorial</a> |
             <a href="/consent">Consentimento</a>
