--- a/frontend/templates/instructions.html
+++ b/frontend/templates/instructions.html
@@ -45,14 +45,15 @@
         <h2>🗣️ Instruções para Gravação da Voz</h2>
         <ul>
             <li>Grave em um local silencioso, sem ruídos de fundo.</li>
-            <li>Mantenha o microfone a cerca de 15-20 cm da boca.</li>
-            <li>Fale normalmente, com tom de voz natural.</li>
+            <li>Mantenha o microfone a cerca de 15-20 cm da boca (Aproximadamente um palmo).</li>
             <li>Evite tossir, pigarrear ou fazer ruídos durante a gravação.</li>
-            <li>Grave uma frase completa ou uma vogal sustentada (ex: “aaaaaa”).</li>
+            <li>Utilize seu tom de voz natural, como se estivesse falando normalmente.</li>
+            <li>Grave pelo máximo tempo possível a pronúncia da vogal sustentada /a/ (ex: “aaaaaa”).</li>
         </ul>
         <div class="botoes">
             <button onclick="window.location.href='/page2'">Gravar Áudio</button>
             <button onclick="window.location.href='/'">Voltar ao Menu</button>
+
         </div>
     </div>
 </body>
