--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -10,7 +10,7 @@
 <!--        <button onclick="window.location.href='/instructions'">Carregar/Gravar Áudio</button>-->
         <button onclick="location.href='/instructions'">Gravar áudio</button>
         <button onclick="location.href='/page3'">Resultados DB</button>
-        <button onclick="location.href='/page4'">Tutorial</button>
+        <button onclick="location.href='/instructions'">Tutorial</button>
         <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/consent';">Visualizar Termo</button>
         <button onclick="logoutUser()">Sair</button>
         <!-- <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/';">Sair</button> -->
